--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Index.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Index.cshtml
@@ -1,18 +1,18 @@
 ﻿@model IEnumerable<PromocaoHumana.Web.Models.Igreja.IgrejaViewModel>
 
 @{
-    ViewData["Title"] = "Igrejas"; 
+    ViewData["Title"] = "Igrejas";
 }
 
 <h2>Igreja</h2>
 
-<<p>
-    @Html.ActionLink("Create New", "Create")
+<p>
+    @Html.ActionLink("Cadastrar", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Id)
+            #
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
@@ -20,7 +20,8 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
@@ -29,9 +30,8 @@
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @* @Html.ActionLink("Details", "Details", new { id=item.Id }) | *@
-                @* @Html.ActionLink("Delete", "Delete", new { id=item.Id }) *@
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Deletar", "Delete", new { id = item.Id }, new { onclick = "return confirm('Tem certeza que deseja excluir?')"})
             </td>
         </tr>
     }
