--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Home/Index.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Início";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem-Vindo</h1>
+    <p>Para saber mais acesse o <a href="https://www.paroquiasaosebastiaoscj.com.br/">site</a> da nossa paróquia.</p>
 </div>
