--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Edit.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Edit.cshtml
@@ -4,3 +4,42 @@
     ViewData["Title"] = @Html.DisplayNameFor(model => model.Nome);
 }
 
+<h2>Alterar</h2>
+@using (Html.BeginForm("Alterar", "Igreja", FormMethod.Post))
+{
+    @Html.ValidationSummary(true)
+    <fieldset>
+
+        <legend>Igreja</legend>
+        
+        <div hidden> 
+            @Html.EditorFor(model => model.Id)
+        </div>
+        
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Nome)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Nome)
+            @Html.ValidationMessageFor(model => model.Nome)
+        </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Cnpj)
+        </div>
+
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Cnpj)
+            @Html.ValidationMessageFor(model => model.Cnpj)
+        </div>
+
+    </fieldset>
+
+    <br/>
+
+    <div>
+
+        @Html.ActionLink("Voltar", "Index")
+        <input type="submit" value="Salvar" class="btn btn-success"/>
+
+    </div>
+}
