Inicio da View de Famílias

--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Create.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Create.cshtml
@@ -1,40 +1,15 @@
-@model PromocaoHumana.Web.Models.Igreja.NovaIgrejaViewModel
+@model PromocaoHumana.Web.Models.Igreja.IgrejaViewModel
+@Html.ValidationSummary()
 
 @{
     ViewData["Title"] = "Cadastro de Nova Igreja";
 }
 
 <h2>Cadastro</h2>
-@using (Html.BeginForm("NovaIgreja", "Igreja", FormMethod.Post))
-{
-    @Html.ValidationSummary(true)
-    <fieldset>
-
-        <legend>Igreja</legend>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Nome)
+<div>
+    <div class="row">
+        <div class="col-sm-12">
+            @await Html.PartialAsync("_Igreja", Model)
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Nome)
-            @Html.ValidationMessageFor(model => model.Nome)
-        </div>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Cnpj)
-        </div>
-
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Cnpj)
-            @Html.ValidationMessageFor(model => model.Cnpj)
-        </div>
-
-    </fieldset>
-
-    <br/>
-
-    <div>
-
-        @Html.ActionLink("Voltar", "Index")
-        <input type="submit" value="Salvar" class="btn btn-success" />
-
     </div>
-}
+</div>
