Tela de cadastro de família

--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Index.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Igrejas";
 }
 
-<h2>Igreja</h2>
+<h2>Cadastro de Igrejas</h2>
 
 <p>
     @Html.ActionLink("Cadastrar", "Create")
