--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Shared/_Layout.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Igreja" asp-action="Index">Igrejas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Familia" asp-action="Index">Famílias</a>
                     </li>
                 </ul>
             </div>
