--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Familia/Index.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Familia/Index.cshtml
@@ -1,5 +1,58 @@
 @model IEnumerable<PromocaoHumana.Web.Models.Familia.FamiliaViewModel>
 
 @{
-    
+    ViewData["Title"] = "Famílias";
 }
+
+<h2>Cadastro de Famílias</h2>
+
+<p>
+    @Html.ActionLink("Cadastrar", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            #
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.NomeResponsavel)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CpfResponsavel)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.NomeConjuge)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.QuantidadeFilhos)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NomeResponsavel)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CpfResponsavel)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NomeConjuge)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.QuantidadeFilhos)
+            </td>
+            <td>
+                Editar | Deletar
+                @* @Html.ActionLink("Editar", "Edit", new { id = item.Id }) | *@
+                @* @Html.ActionLink("Deletar", "Delete", new { id = item.Id }, new { onclick = "return confirm('Tem certeza que deseja excluir?')"}) *@
+            </td>
+        </tr>
+    }
+
+</table>
