--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Familia/Index.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Familia/Index.cshtml
@@ -48,9 +48,8 @@
                 @Html.DisplayFor(modelItem => item.QuantidadeFilhos)
             </td>
             <td>
-                Editar | Deletar
-                @* @Html.ActionLink("Editar", "Edit", new { id = item.Id }) | *@
-                @* @Html.ActionLink("Deletar", "Delete", new { id = item.Id }, new { onclick = "return confirm('Tem certeza que deseja excluir?')"}) *@
+                @Html.ActionLink("Editar", "Edit", new {id = item.Id}) |
+                @Html.ActionLink("Deletar", "Delete", new {id = item.Id}, new {onclick = "return confirm('Tem certeza que deseja excluir?')"})
             </td>
         </tr>
     }
