--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Familia/_Familia.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Familia/_Familia.cshtml
@@ -14,6 +14,14 @@
             @Html.EditorFor(model => model.Id)
         </div>
 
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Ativa)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Ativa)
+            @Html.ValidationMessageFor(model => model.Ativa)
+        </div>
+
         <legend>Família</legend>
         <div class="editor-label">
             @Html.LabelFor(model => model.NomeResponsavel)
@@ -48,21 +56,86 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.DataCadastro)
+            @Html.LabelFor(model => model.Telefone)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.DataCadastro)
-            @Html.ValidationMessageFor(model => model.DataCadastro)
+            @Html.EditorFor(model => model.Telefone)
+            @Html.ValidationMessageFor(model => model.Telefone)
+        </div>
+
+        <legend>Endereço</legend>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Cep)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Cep)
+            @Html.ValidationMessageFor(model => model.Cep)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Ativa)
+            @Html.LabelFor(model => model.Logradouro)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Ativa)
-            @Html.ValidationMessageFor(model => model.Ativa)
+            @Html.EditorFor(model => model.Logradouro)
+            @Html.ValidationMessageFor(model => model.Logradouro)
         </div>
-        
-        
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Numero)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Numero)
+            @Html.ValidationMessageFor(model => model.Numero)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Bairro)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Bairro)
+            @Html.ValidationMessageFor(model => model.Bairro)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Complemento)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Complemento)
+            @Html.ValidationMessageFor(model => model.Complemento)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Cidade)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Cidade)
+            @Html.ValidationMessageFor(model => model.Cidade)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Uf)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Uf)
+            @Html.ValidationMessageFor(model => model.Uf)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Observacoes)
+        </div>
+        <div class="editor-field">
+            @Html.TextAreaFor(model => model.Observacoes, 5)
+            @Html.ValidationMessageFor(model => model.Observacoes)
+        </div>
+
     </fieldset>
+    
+    <br/>
+
+    <div>
+
+        @Html.ActionLink("Voltar", "Index")
+        <input type="submit" value="Salvar" class="btn btn-success"/>
+
+    </div>
 }
