--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Shared/_Layout.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <img src= "@Url.Content("~/images/paroquia-sao-sebastiao.png")" alt="IMAGES" />
+            <img src="@Url.Content("~/images/paroquia-sao-sebastiao.png")" alt="IMAGES"/>
             @* <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Promoção Humana</a> *@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -28,6 +28,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Familia" asp-action="Index">Famílias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Doacao" asp-action="Index">Doações</a>
                     </li>
                 </ul>
             </div>
