--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Edit.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Igreja/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model PromocaoHumana.Web.Models.Igreja.IgrejaViewModel
+@Html.ValidationSummary()
 
 @{
     ViewData["Title"] = @Html.DisplayNameFor(model => model.Nome);
