--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Doacao/Index.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Doacao/Index.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Cadastro de Famílias</h2>
 
-@* <p> *@
-@*     @Html.ActionLink("Cadastrar", "Create") *@
-@* </p> *@
+<p>
+    @Html.ActionLink("Cadastrar", "Create")
+</p>
 <table class="table">
     <tr>
         <th>
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.MesRetirada)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ResponsavelFamilia)
+            @Html.DisplayNameFor(model => model.Familia)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.LocalRetirada)
@@ -39,7 +39,7 @@
                 @Html.DisplayFor(modelItem => item.MesRetirada)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ResponsavelFamilia)
+                @Html.DisplayFor(modelItem => item.Familia)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LocalRetirada)
@@ -48,9 +48,8 @@
                 @Html.DisplayFor(modelItem => item.QuemRetirou)
             </td>
             <td>
-                Editar | Deletar
-                @* @Html.ActionLink("Editar", "Edit", new {id = item.Id}) | *@
-                @* @Html.ActionLink("Deletar", "Delete", new {id = item.Id}, new {onclick = "return confirm('Tem certeza que deseja excluir?')"}) *@
+                @Html.ActionLink("Editar", "Edit", new {id = item.Id}) |
+                @Html.ActionLink("Deletar", "Delete", new {id = item.Id}, new {onclick = "return confirm('Tem certeza que deseja excluir?')"})
             </td>
         </tr>
     }
