--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Familia/Edit.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Familia/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model PromocaoHumana.Web.Models.Familia.FamiliaViewModel
+@Html.ValidationSummary()
 
 @{
     ViewData["Title"] = @Html.DisplayNameFor(model => model.NomeResponsavel);
