--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Doacao/Create.cshtml
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/Views/Doacao/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Cadastro de Nova Doação";
 }
 
-<h2>Cadastro</h2>
+<h2>Nova Doação</h2>
 <div>
     <div class="row">
         <div class="col-sm-12">
