--- a/src/PromocaoHumana.Web/Views/Familia/_Familia.cshtml
+++ b/src/PromocaoHumana.Web/Views/Familia/_Familia.cshtml
@@ -68,7 +68,7 @@
             @Html.LabelFor(model => model.Cep)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Cep, new {id = "cep"})
+            @Html.EditorFor(model => model.Cep)
             @Html.ValidationMessageFor(model => model.Cep)
         </div>
 
@@ -76,7 +76,7 @@
             @Html.LabelFor(model => model.Logradouro)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Logradouro, new {id = "rua"})
+            @Html.EditorFor(model => model.Logradouro)
             @Html.ValidationMessageFor(model => model.Logradouro)
         </div>
 
@@ -92,7 +92,7 @@
             @Html.LabelFor(model => model.Bairro)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Bairro, new {id = "bairro"})
+            @Html.EditorFor(model => model.Bairro)
             @Html.ValidationMessageFor(model => model.Bairro)
         </div>
 
@@ -108,7 +108,7 @@
             @Html.LabelFor(model => model.Cidade)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Cidade, new {id = "cidade"})
+            @Html.EditorFor(model => model.Cidade)
             @Html.ValidationMessageFor(model => model.Cidade)
         </div>
 
@@ -116,7 +116,7 @@
             @Html.LabelFor(model => model.Uf)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Uf, new { id = "uf"})
+            @Html.EditorFor(model => model.Uf)
             @Html.ValidationMessageFor(model => model.Uf)
         </div>
 
@@ -141,25 +141,24 @@
 
     @section Scripts
     {
-        <script>
-                jQuery(function ($) {
-                    $("input[id='cep']").change(function () {
-                            var cep = $(this).val();
-                            if (cep.lenth <= 0) return;
-                            $.get(`https://viacep.com.br/ws/.${cep}/json`, function (result) {
-                                    if (result.status != 1) {
-                                        alert(result.message || "Houve um erro desconhecido");
-                                        return;
-                                    } 
-                                    $("input[id='cep']").val(result.Cep);
-                                    $("input[id='rua']").val(result.Logradouro);
-                                    $("input[id='bairro']").val(result.Bairro);
-                                    $("input[id='cidade']").val(result.Localidade);
-                                    $("input[id='uf']").val(result.Uf);
-                                });
-                        });
-                    });
-            </script>
+        <script type="text/javascript">
+           $('#Cep').change(function () {
+                var cep = $(this).val();
+                if (cep.lenth <= 0) return;
+                $.get(`https://viacep.com.br/ws/.${cep}/json`, function (result) {
+                        if (result.status != 1) {
+                            alert(result.message || "Houve um erro desconhecido");
+                            return;
+                        } 
+                        $('#Cep').val(result.Cep);
+                        $('#Logradouro').val(result.Logradouro);
+                        $('#Bairro').val(result.Bairro);
+                        $('#Cidade').val(result.Localidade);
+                        $('#Uf').val(result.Uf);
+                    });      
+           });
+          
+        </script>
     }
 
 }
