--- a/src/PromocaoHumana.Web/Views/Igreja/_Igreja.cshtml
+++ b/src/PromocaoHumana.Web/Views/Igreja/_Igreja.cshtml
@@ -5,40 +5,34 @@
     @if (!string.IsNullOrWhiteSpace(ViewBag.ErrorMessage))
     {
         @:<div class="alert alert-danger">
-        @:<p > @ViewBag.ErrorMessage </p >
-        @:</div >
+            @:<p> @ViewBag.ErrorMessage </p>
+        @:</div>
     }
-    <fieldset>
+<fieldset>
 
-        <div hidden>
-            @Html.EditorFor(model => model.Id)
-        </div>
-        
-        <legend>Igreja</legend>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Nome)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Nome)
-            @Html.ValidationMessageFor(model => model.Nome)
-        </div>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Cnpj)
-        </div>
+    <div hidden>
+        @Html.EditorFor(model => model.Id)
+    </div>
 
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Cnpj)
-            @Html.ValidationMessageFor(model => model.Cnpj)
-        </div>
+    <legend>Igreja</legend>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Nome)
+        @Html.EditorFor(model => model.Nome, additionalViewData: new { htmlAttributes = new { @class = "form-control", placeholder = "Informe o nome " } })
+        @Html.ValidationMessageFor(model => model.Nome)
+    </div>
 
-    </fieldset>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Cnpj)
+        @Html.EditorFor(model => model.Cnpj, additionalViewData: new { htmlAttributes = new { @class = "form-control", placeholder = "Informe o CNPJ " } })
+        @Html.ValidationMessageFor(model => model.Cnpj)
+    </div>
 
-    <br/>
+</fieldset>
+
+    <br />
 
     <div>
-
-        @Html.ActionLink("Voltar", "Index")
-        <input type="submit" value="Salvar" class="btn btn-success"/>
-
+        @Html.ActionLink("Voltar", "Index", new { id = 1 }, new { @class = "btn btn-outlined" })
+        <input type="submit" value="Salvar" class="btn btn-primary" />
     </div>
 }
