--- a/src/PromocaoHumana.Web/wwwroot/css/site.css
+++ b/src/PromocaoHumana.Web/wwwroot/css/site.css
@@ -9,19 +9,79 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #893b40;
+}
+
+a:hover,
+a:focus,
+a:active {
+    color: #9c4e51;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    background-color: #893b40;
+    border-color: #893b40;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary:not(:disabled):not(.disabled).active,
+.btn-primary:not(:disabled):not(.disabled):active,
+.show > .btn-primary.dropdown-toggle {
+    background-color: #9c4e51;
+    border-color: #9c4e51;
+}
+
+.btn-primary:focus,
+.btn-primary:not(:disabled):not(.disabled).active:focus,
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.show > .btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem rgb(156 78 81 / 50%);
+}
+
+.btn-outlined {
+    background-color: #ffffff;
+    border-color: #893b40;
+    color: #893b40;
+}
+
+.btn-outlined:hover,
+.btn-outlined:focus,
+.btn-outlined:active,
+.btn-outlined:not(:disabled):not(.disabled).active,
+.btn-outlined:not(:disabled):not(.disabled):active,
+.show > .btn-outlined.dropdown-toggle {
+    border-color: #9c4e51;
+    color: #9c4e51;
+}
+
+.btn-outlined:focus,
+.btn-outlined:not(:disabled):not(.disabled).active:focus,
+.btn-outlined:not(:disabled):not(.disabled):active:focus,
+.show > .btn-outlined.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem rgb(156 78 81 / 15%);
+}
+
+.btn-danger {
+    background-color: #D65C64;
+    border-color: #D65C64;
+}
+
+.btn-link {
+    color: #893b40;
+}
+
+.btn-link:hover,
+.btn-link:active,
+.btn-link:focus {
+    color: #9c4e51;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
@@ -59,8 +119,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    color: #606060;
 }
 .footer {
   position: absolute;
@@ -68,4 +129,17 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+table {
+    color: #606060;
+}
+
+.field-validation-error, .alert-danger {
+    color: #D65C64;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    background-color: #893b40;
+    border-color: #893b40;
 }
